--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,23 +18,20 @@
         tools:targetApi="31">
         <activity
             android:name=".player.ui.PlayerActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".search.ui.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".library.ui.LibraryActivity"
+            android:name=".search.ui.SearchActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".library.ui.LibraryActivity"
+            android:exported="false" />
         <activity
             android:name=".settings.ui.SettingsActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
+            android:exported="false" />
         <activity
             android:name=".main.ui.MainActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
